--- a/Components/Vote/Vote.module.css
+++ b/Components/Vote/Vote.module.css
@@ -28,6 +28,7 @@
 .Vote_box input{
     width: 8rem;
     height: 1.4rem;
+    padding: 1rem;
     border: none;
     text-align: center;
     border-radius: .4rem;
@@ -35,8 +36,9 @@
 
 .Vote_box_btn  {
     text-align: center;
-    padding: 1rem;
+    padding: .5rem;
     width: 20%;
+    height: 4rem;
     border-radius: 1rem;
     background-color: rgb(136, 86, 236);
     color: white;
@@ -108,6 +110,7 @@
 
 .Vote_box{
     width: 80%;
+    text-align: center;
     margin: auto;
     margin-top: 3rem;
     padding: 1rem;
@@ -116,14 +119,16 @@
 }
 
 .Vote_box_form{
-    display: flex;
+    
+    display: grid;
+    grid-template-columns: 1fr;
     gap: 10%;
     align-items: center;
 }
 
 .Vote_box label{
     background-color: rgb(119, 77, 210);
-    padding: .5rem 1rem;
+    padding: 1rem 1rem;
     border-radius: .4rem;
     color: white;
     text-align: left;
@@ -132,6 +137,7 @@
 .Vote_box input{
     width: 8rem;
     height: 1rem;
+    padding: .8rem 0;
     border: none;
     text-align: center;
     border-radius: .4rem;
@@ -139,9 +145,9 @@
 
 .Vote_box_btn  {
     text-align: center;
-    padding: .5rem;
-    width: 20%;
-    height: 2rem;
+    padding: .8rem;
+    width: 50%;
+    height: 3rem;
     border-radius: .8rem;
     font-size: .8rem;
     
@@ -204,7 +210,7 @@
 
 .Vote_box label{
     background-color: rgb(119, 77, 210);
-    padding: .5rem 1rem;
+    padding: 1rem 1rem;
     border-radius: .4rem;
     color: white;
     text-align: left;
@@ -213,6 +219,7 @@
 .Vote_box input{
     width: 8rem;
     height: 1rem;
+    padding: 1rem;
     border: none;
     text-align: center;
     border-radius: .4rem;
@@ -222,9 +229,9 @@
     text-align: center;
     padding: .5rem;
     width: 20%;
-    height: 2rem;
+    height: 4rem;
     border-radius: .8rem;
-    font-size: .8rem;
+    font-size: 1rem;
     
 }
 
@@ -285,7 +292,7 @@
 
 .Vote_box label{
     background-color: rgb(119, 77, 210);
-    padding: .5rem 1rem;
+    padding: 1rem 1rem;
     border-radius: .4rem;
     color: white;
     text-align: left;
@@ -294,6 +301,7 @@
 .Vote_box input{
     width: 8rem;
     height: 1rem;
+    padding: 1rem;
     border: none;
     text-align: center;
     border-radius: .4rem;
@@ -303,7 +311,7 @@
     text-align: center;
     padding: .5rem;
     width: 20%;
-    height: 2rem;
+    height: 4rem;
     border-radius: .8rem;
     font-size: .8rem;
     
